--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -71,6 +71,7 @@ OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
 PERL = @PERL@
 SCORING = @SCORING@
+TEST_MODE = @TEST_MODE@
 VERSION = @VERSION@
 LIBS = -lm @LEXLIB@
 
