--- a/Makefile.in
+++ b/Makefile.in
@@ -72,6 +72,7 @@ OPT_WAKATI_DEFAULT = @OPT_WAKATI_DEFAULT@
 PACKAGE = @PACKAGE@
 PERL = @PERL@
 SCORING = @SCORING@
+TEST_MODE = @TEST_MODE@
 VERSION = @VERSION@
 AUTOMAKE_OPTIONS = no-dependencies
 
