--- a/src/mknmz.pl.in
+++ b/src/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- CPerl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.33 1999-08-28 09:26:18 satoru Exp $
+# $Id: mknmz.pl.in,v 1.34 1999-08-28 11:32:28 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -467,7 +467,7 @@ sub load_document ($$$$$\%) {
     my $sizeref = \$size;
     return ($size, 0, 0, 'x-system/x-error') if $size > $conf::FILE_SIZE_LIMIT;
 
-    # for handling a file which contains Shift_JIS code
+    # for handling a filename which contains Shift_JIS code
     my $shelter_cfile = "";
     if ($SYSTEM eq "MSWin32" 
 	&& $cfile =~ /[\x81-\x9f\xe0-\xef][\x40-\x7e\x80-\xfc]|[\x20\xa1-\xdf]/) 
@@ -477,30 +477,7 @@ sub load_document ($$$$$\%) {
         util::cp($shelter_cfile,$cfile);
     }
 
-    # filtering process
-    my $fh_cfile = util::efopen($cfile);
-    $$content = join('', <$fh_cfile>);
-    my $mm = new File::MMagic;
-    my $mtype;
-    while (1) {
-	my $mtype_n = $mm->checktype_byfilename($cfile);
-	my $mtype_c = $mm->checktype_content($$content);
-	$mtype = decide_type($mtype_n, $mtype_c);
-	if (defined $var::REQUIRE_ACTIONS{$mtype}) {
-	    vprint("Using $var::REQUIRE_ACTIONS{$mtype}.pl\n");
-	    require $var::REQUIRE_ACTIONS{$mtype}.'.pl';
-	    eval $var::REQUIRE_ACTIONS{$mtype} .
-	      '::filter($orig_cfile, $content, $weighted_str, $headings, $fields, $sizeref);';
-	    if ($@) {
-		print STDERR "Faild to call $var::REQUIRE_ACTIONS{$mtype}\n$@\n";
-		$mtype = "x-system/x-error; failed to call $var::REQUIRE_ACTIONS{$mtype}";
-		last;
-	    }
-	    $zipped = 1, next if (defined $var::RECURSIVE_ACTIONS{$mtype});
-	}
-	last;
-    }
-
+    $$content = util::readfile($cfile);
     if ($conf::LANGUAGE eq "ja" && ! $var::USE_NKF_MODULE) {
 	my $nkftmp = 'NMZ.nkftmp';
 	my $nh = util::efopen("|$conf::NKF -emXZ1 > $nkftmp");
@@ -514,6 +491,28 @@ sub load_document ($$$$$\%) {
 	$$content = NKF::nkf("-emXZ1", $$content);
     }
 
+    # filtering process
+    my $mm = new File::MMagic;
+    my $mtype;
+    while (1) {
+	my $mtype_n = $mm->checktype_byfilename($cfile);
+	my $mtype_c = $mm->checktype_contents($$content);
+	$mtype = decide_type($mtype_n, $mtype_c);
+	if (defined $var::REQUIRE_ACTIONS{$mtype}) {
+	    util::vprint("Using $var::REQUIRE_ACTIONS{$mtype}.pl\n");
+	    require $var::REQUIRE_ACTIONS{$mtype}.'.pl';
+	    eval $var::REQUIRE_ACTIONS{$mtype} .
+	      '::filter($orig_cfile, $content, $weighted_str, $headings, $fields, $sizeref);';
+	    if ($@) {
+		print STDERR "Faild to call $var::REQUIRE_ACTIONS{$mtype}\n$@\n";
+		$mtype = "x-system/x-error; failed to call $var::REQUIRE_ACTIONS{$mtype}";
+		last;
+	    }
+	    $zipped = 1, next if (defined $var::RECURSIVE_ACTIONS{$mtype});
+	}
+	last;
+    }
+
     if ($SYSTEM eq "MSWin32" && $shelter_cfile ne "") {
 	unlink $cfile;
 	$cfile = $shelter_cfile;
@@ -522,11 +521,11 @@ sub load_document ($$$$$\%) {
     # if a zipped file, the size has been changed
     if ($zipped) {
 	return ($size, 0, 0, 'x-system/x-error;')
-	  if $size > $conf::FILE_SIZE_LIMIT;
+	    if $size > $conf::FILE_SIZE_LIMIT;
     }
 
     $$content =~ s/[ \t]+/ /g;   # remain LFs v1.03
-    $$content =~ s/\r\n/\n/g;    # remain LFs is for ChaSen
+    $$content =~ s/\r\n/\n/g;    # remain LFs for ChaSen
     $$content =~ s/\r/\n/g;      # CR+LF or CR are into LF
 
 
@@ -977,7 +976,7 @@ sub write_message ($$) {
 	
 	$full_path_name =~ m!.*/(.*)$!;
 	$fname = $1;
-	my $templatedir2 = cwd() . "/../filter";  # relative path from cwd
+	my $templatedir2 = cwd() . "/../template";  # relative path from cwd
 	if ($TestMode && -e "$templatedir2/$fname") {
 	    $template = "$templatedir2/$fname";
 	} else {
@@ -1015,14 +1014,14 @@ sub make_slog_file () {
 sub change_dbnames ($) {
     my ($current_dir) = @_;
 
-    for my $key (sort keys %conf::File) {
+    for my $key (sort keys %var::File) {
 	next if $key =~ /^TMP/;  # exclude temporary file
 	next if $key =~ /_$/;    # exclude temporary file
 	$var::File{$key} = "$current_dir/$var::File{$key}";
     }
 
     # temporary files
-    for my $key (sort keys %conf::File) {
+    for my $key (sort keys %var::File) {
 	if ($key =~ /^TMP/ || $key =~ /_$/) {
 	    $var::File{$key} = "$current_dir/$var::File{$key}.$$";
 	}
@@ -1462,11 +1461,11 @@ sub make_phrase_hash ($$$) {
     my $fid = $file_count + $file_base;
     for my $word (@words) {
 	my $hash = hash($word_b . $word);
-	if (!defined($tmp{$hash})) {
+	unless (defined $tmp{$hash}) {
 	    $tmp{$hash} = 1;
 	    $PhraseHashLast{$hash} = 0 unless defined $PhraseHashLast{$hash};
 	    $PhraseHash{$hash} .= pack("w", $fid - $PhraseHashLast{$hash});
-	    util::dprint("<$word_b, $word> $hash\n");
+#	    util::dprint("<$word_b, $word> $hash\n");
 	    $PhraseHashLast{$hash} = $fid;
 	}
 	$word_b = $word;
