--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,8 @@ namazu_SOURCES = cgi.c codeconv.c conf.c field.c form.c getopt.c \
 		 result.l regex.c search.c seed.c util.c usage.c var.c wakati.c
 noinst_HEADERS = namazu.h regex.h util.h getopt.h field.h codeconv.h \
 		 form.h usage.h hlist.h re.h output.h conf.h em.h \
-		 magic.h critical.h
+		 magic.h critical.h cgi.h message.h var.h parser.h search.h \
+		 result.h wakati.h
 
 ##################################################################
 
